# Slop-Block

./: .dockerignore  .env.example  .gitignore  BUILD_PLAN.md  Cargo.toml  PRODUCT_DISCOVERY.md  README.md  create_test_issues.py  docker-compose.yml  package.json  pnpm-lock.yaml
.cursor/rules/: deploy-after-changes.mdc
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/src/: admin_auth.rs  backfill_jobs.rs  captcha_config.rs  captcha_routes.rs  config.rs  error.rs  github_content_gate.rs  github_helpers.rs  github_subjects.rs  github_tokens.rs  installation_gate.rs  job_runner.rs  lib.rs  main.rs  oauth.rs  oauth_state.rs  policy_routes.rs  rate_limit.rs  secret_box.rs  verification_finalize.rs  web_util.rs  webhooks.rs
apps/api/src/captcha_config/: mod.rs  resolve.rs  types.rs
apps/api/src/policy_routes/: backfills.rs  guards.rs  installations.rs  mod.rs  queue.rs  repos.rs
apps/web/: middleware.ts  next.config.ts  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/dashboard/installations/: page.tsx
apps/web/app/dashboard/repos/[repoId]/: page.tsx
apps/web/app/dashboard/settings/: page.tsx
apps/web/app/install/: page.tsx
apps/web/app/setup/github/install-complete/: page.tsx
apps/web/app/verify/[sessionId]/: page.tsx
apps/web/app/verify/[sessionId]/error/: page.tsx
apps/web/app/verify/[sessionId]/success/: page.tsx
apps/web/app/verify/source/: page.tsx
apps/web/components/: AllowlistEditor.tsx  AuthPanel.tsx  BackfillPanel.tsx  CaptchaSettingsEditor.tsx  CaptchaWidget.tsx  ConfirmDialog.tsx  InstallCompleteClient.tsx  InstallationsList.tsx  QueuePanel.tsx  RepoPolicyEditor.tsx  ReposList.tsx  Toaster.tsx  VerifyClient.tsx  VerifyErrorClient.tsx  VerifyShell.tsx  VerifySourceClient.tsx  VerifySuccessClient.tsx
apps/web/lib/: api.ts  confirm.ts  toast.ts
crates/captcha/: Cargo.toml
crates/captcha/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: artifacts.rs  backfill.rs  connection.rs  installations.rs  jobs.rs  lib.rs  models.rs  policy.rs  propagation.rs  rate_limits.rs  sessions.rs  subjects.rs
crates/github/: Cargo.toml
crates/github/src/: client.rs  error.rs  jwt.rs  lib.rs  types.rs  webhook.rs
crates/github/tests/fixtures/: test_rsa.pem
crates/jobs/: Cargo.toml
crates/jobs/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
docker/: Dockerfile.api  Dockerfile.web
docs/: configuration.md  github-app-listing-description.md  github-app-setup.md  hosted-service.md  privacy.md  security.md  self-hosting.md  terms.md
migrations/: 20260526000100_mvp_schema.sql  20260608000100_app_settings.sql  20260612000100_drop_installation_tokens.sql  20260612000200_scrub_stored_payloads.sql  20260704000100_hosted_multi_tenant.sql  20260704000200_hosted_oauth_tokens.sql  20260704000300_backfill_queue.sql  20260707000100_propagation_tracking.sql  20260708000100_scale_hardening.sql  20260709000100_github_subject_queue_indexes.sql
scripts/: install-git-hooks.sh
