[package]
name = "api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
hex.workspace = true
hmac.workspace = true
github = { path = "../../crates/github" }
jobs = { path = "../../crates/jobs" }
rand = "0.8"
base64 = "0.22"
chacha20poly1305 = "0.10"
captcha = { path = "../../crates/captcha" }
db = { path = "../../crates/db" }
policy = { path = "../../crates/policy" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
urlencoding = "2"

[dev-dependencies]
tower.workspace = true
